--- a/exercicios/ex017/fonte01.html
+++ b/exercicios/ex017/fonte01.html
@@ -8,11 +8,17 @@
     <style>
         body {
             font-family: monospace;
+            /* 
+            Medidas Absolutas
+            cm, mm, in (polegadas), px, pt e pc
+
+            Medidas Relativas
+            em, ex, rem, vw, vh, %
+            16px, geralmente = 1em  (tambem podendo trabalhar com numeros reais)
+            */
+            font-size: 1em;
         }
 
-        h1,h2 {
-            font-family: 'Times New Roman', Times, serif;
-        }
     </style>
 </head>
 <body>
