--- a/exercicios/ex017/fonte01.html
+++ b/exercicios/ex017/fonte01.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <style>
         body {
-            font-family: monospace;
+            font-family: 'work sans', Arial, Helvetica, sans-serif;
             /* 
             Medidas Absolutas
             cm, mm, in (polegadas), px, pt e pc
@@ -17,6 +17,22 @@
             16px, geralmente = 1em  (tambem podendo trabalhar com numeros reais)
             */
             font-size: 1em;
+            font-weight: ;
+            /* weight - width - height */
+        }
+
+        h1 {
+            /*font-family: 'Work Sans', sans-serif;
+            font-weight: bolder;
+            font-size: 3em;
+            font-style: italic;*/
+            /* shorthand */
+            /* font-style -> font-weight -> font-size -> font-family */
+            font: italic bolder 3em 'Work Sans', sans-serif;
+        }
+
+        h2 {
+            font: italic 3em sans-serif;
         }
 
     </style>
