--- a/exercicios/ex020/pseudoclasse.html
+++ b/exercicios/ex020/pseudoclasse.html
@@ -46,4 +46,11 @@
     <div id="d2">02</div>
     <div id="d3">03</div>
 </body>
+
+    <ul>
+        <li><a href="contato.html" target="self" ref="next">Contato</a></li>
+        <li><a href="pseudoclasse.html" target="_self" ref="next">Pseudo Classes</a></li>
+        <li><a href="links.html" target="_self" ref="next">Links</a></li>
+        <li><a href="Hover" target="_self" ref="next">Hover</a></li>
+    </ul>
 </html>
