--- a/exercicios/ex020/links.html
+++ b/exercicios/ex020/links.html
@@ -4,29 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Links</title>
-    <style>
-        @font-face {
-            font-family: 'mr';
-            src: url(fonts/SuperMario256.ttf) format(truetype);
-            font-weight: normal;
-            font-family: normal;
-        }
-        
-        body {
-            font-family: 'Times New Roman', Times, serif;
-        }
-
-        h1 {
-            font-family: 'mr', 'Times New Roman', Times, serif;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Pesonalizando Links</h1>
     <ul>
-        <li><a href="https://github.com/davidmonn" >Repositorio GitHub</a></li>
-        <li><a href="https://www.linkedin.com/in/david-monteiro-a44217227/">Linkedjin</a></li>
-        <li><a href="contato.html">Contato</a></li>
+        <li><a href="https://github.com/davidmonn" target="_blank" ref="next">Repositorio GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/david-monteiro-a44217227/" target="_black" ref="next">Linkedjin</a></li>
+        <li><a href="contato.html" target="_blank" ref="next">Contato</a></li>
     </ul>
 </body>
 </html>
