--- a/exercicios/ex020/links.html
+++ b/exercicios/ex020/links.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="https://github.com/davidmonn" target="_blank" ref="next">Repositorio GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/david-monteiro-a44217227/" target="_black" ref="next">Linkedjin</a></li>
-        <li><a href="contato.html" target="_blank" ref="next">Contato</a></li>
+        <li><a href="contato.html" target="_self" ref="next">Contato</a></li>
     </ul>
 </body>
 </html>
