--- a/exercicios/ex020/pseudoclasse.html
+++ b/exercicios/ex020/pseudoclasse.html
@@ -28,6 +28,9 @@
         #d3 {
             background-color: bisque;
         }
+        #d4 {
+            background-color: rgb(255, 149, 0);
+        }
 
         #d1:hover {
             background-color: rgba(249, 245, 8, 0.842);
@@ -38,15 +41,19 @@
         #d3:hover {
             background-color: #51b4ffdd;
         }
-
+    
+        #d4:hover {
+            background-color: #549400dd;
+        }
     </style>
 </head>
 <body>
     <div id="d1">01</div>
     <div id="d2">02</div>
     <div id="d3">03</div>
+    <div id="d4">04</div>
 </body>
-
+ 
     <ul>
         <li><a href="contato.html" target="self" ref="next">Contato</a></li>
         <li><a href="pseudoclasse.html" target="_self" ref="next">Pseudo Classes</a></li>
