--- a/exercicios/EX021/caixa01.html
+++ b/exercicios/EX021/caixa01.html
@@ -10,19 +10,47 @@
             background-color: rgba(128, 0, 128, 0.265);
             height: 300px;
             width: 300px;
+           
+            /*
             border-width: 10px;
             border-style: groove;
-            border-color: rgba(255, 0, 0, 0.489);
+            border-color: rgba(30, 236, 20, 0.733);
+            como podemos ver o comando abaixo border, simplificou toda essa parte
+            */
+            border: 10px groove rgba(30, 236, 20, 0.733);
+            /*
             padding-top: 10px;
             padding-right: 10px;
             padding-right: 10px;
             padding-left: 10px;
+            */
+            padding: 10px;  /* no caso de todos forem iguais podemos 
+                                deixar apenas um padding de 10 */
+
+            /*
+            margin-top: 10px;
+            margin-right: 10px;
+            margin-bottom: 10px;
+            margin-left: 10px;
+            */
+            margin: 10px;
+
+            /*
+            outline-width: 8px;
+            outline-style: dashed;
+            outline-color: blue;
+            */
+            outline: 8px dashed blue;
+
         }
 
         .in {
+            /*
             border-width: 10px;
             border-style: solid;
             border-color: rgba(255, 217, 0, 0.539);
+            */
+            border: 7px solid rgba(255, 217, 0, 0.539);
         }
     </style>
 </head>
