--- a/exercicios/EX021/caixa02.html
+++ b/exercicios/EX021/caixa02.html
@@ -15,7 +15,10 @@
             background-color: rgba(102, 59, 6, 0.594);
             padding: 10px;
             margin: 10px;
+            border-radius: 20px;
+            text-align: center;
         }
+
 
         main {
             background-color: rgba(238, 130, 238, 0.509);
@@ -31,18 +34,40 @@
             margin: 0px;
         }
 
+        footer > p {
+            margin: 0px;
+        }
+
         article > aside {
             background-color: blue;
-            padding: 5px;
+            text-align: right;
+            padding-right: 50px;
+            
         }
 
         article {
             background-color: rgba(0, 0, 0, 0.365);
         }
 
+
+
+        article > h2 {
+            background-color: none;
+            padding-top: 10px;
+            padding-left: 20px;
+            text-align: justify;
+        }
+
+        article > p {
+            text-align: justify;
+            padding-left: 40px;
+            padding-right: 40px;
+        }
+
         nav {
             background-color: burlywood;
             padding: 12px;
+            box-shadow: 11px 10px 20px 1px rgba(2, 36, 255, 0.331);
         }
 
         /*a {
@@ -79,6 +104,8 @@
             outline: 10px;
             outline-style: double;
             outline-color: black; 
+
+            border-radius: 5px;
         }
 
         nav > a:hover {
@@ -88,6 +115,7 @@
         nav > a:active {
             color: blueviolet;
         }
+        
     </style>
 </head>
 <body>
