--- a/exercicios/EX021/caixa02.html
+++ b/exercicios/EX021/caixa02.html
@@ -116,6 +116,14 @@
             color: blueviolet;
         }
         
+        #bola {
+            background-color: red;
+            height: 100px;
+            width: 100px;
+            margin: 10px;
+            border-radius: 50%;
+        }
+
     </style>
 </head>
 <body>
@@ -148,5 +156,6 @@
     <footer>
         <p>Desenvolvido por: David</p>
     </footer>
+    <div id="bola"></div>
 </body>
 </html>
