--- a/exercicios/d010/android.html
+++ b/exercicios/d010/android.html
@@ -48,7 +48,7 @@
 
             <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.</p>
 
-            <img src="imagens/bugdroid.png" alt="Android de maos dadas com uma pessoa">
+            <img src="imagens/bugdroid.png" alt="Android de maos dadas com uma pessoa" class="bugd">
 
             <p>A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
 
@@ -85,8 +85,8 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por David.</p>
-        <p>Desafio 010 - Curso em Video - Modulo 02</p>
+        <p>Site criado por <a href="https://github.com/davidmonn" target="_blank">David</a>.</p>
+        <p><strong>Desafio 010 - Curso em Video - Modulo 02</strong></p>
     </footer>
 </body>
 </html>
