--- a/exercicios/d010/android.html
+++ b/exercicios/d010/android.html
@@ -36,7 +36,10 @@
             </p>
 
 
-            <img src="imagens/dan-droids.png" alt="Androids Coloridos">
+            <picture>
+                <source media="(max-width: 750px)" srcset="imagens/dan-droids-pq.png" type="image/png">
+                <img src="imagens/dan-droids.png" alt="Androids Coloridos">
+            </picture>
 
             <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.</p>
 
@@ -44,7 +47,10 @@
 
             <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/android" target="_blank">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
-            <img src="imagens/irina-blok.jpg" alt="Irina Block (Criadora mascote android)">
+            <picture>
+                <source media="(max-width: 750px)" srcset="imagens/irina-blok-pq.jpg" type="image/png">
+                <img src="imagens/irina-blok.jpg" alt="Irina Block (Criadora mascote android)">
+            </picture>
 
             <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.</p>
 
@@ -85,7 +91,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/davidmonn" target="_blank">David</a>.</p>
+        <p>Site criado por <a href="https://github.com/davidmonn" target="_blank" class="meu">David</a>.</p>
         <p><strong>Desafio 010 - Curso em Video - Modulo 02</strong></p>
     </footer>
 </body>
